# MeltyTool

./: .gitattributes  .gitignore  README.md
.github/workflows/: nightly_build.yml  test.yml
FinModelUtility/: .editorconfig  Directory.Build.props  FinModelUtility.sln  FinModelUtility.sln.DotSettings
FinModelUtility/Benchmarks/: Benchmarks.csproj  CastingValues.cs  CopyingAndReversingValues.cs  CopyingMemory.cs  CopyingValue.cs  DependencyInjection.cs  EditingBitmaps.cs  EditingClassVsStruct.cs  FetchDirectories.cs  Finite.cs  IndexableDictionaries.cs  Loops.cs  Main.cs  PassingInStructs.cs  QuaternionCreation.cs  Radians.cs  ReadingStringNts.cs  ReturningClassVsStruct.cs  ReturningTuple.cs  Simd.cs  Sorting.cs  TrimmingStrings.cs
FinModelUtility/ImaginaryFileSystem/: CommonExceptions.cs  IImaginaryFileDataAccessor.cs  ImaginaryDirectory.cs  ImaginaryDirectoryData.cs  ImaginaryDirectoryInfo.cs  ImaginaryDirectoryInfoFactory.cs  ImaginaryDriveData.cs  ImaginaryDriveInfo.cs  ImaginaryDriveInfoFactory.cs  ImaginaryFile.Async.cs  ImaginaryFile.cs  ImaginaryFileData.cs  ImaginaryFileInfo.cs  ImaginaryFileInfoFactory.cs  ImaginaryFileStream.cs  ImaginaryFileStreamFactory.cs  ImaginaryFileSystem.cs  ImaginaryFileSystem.csproj  ImaginaryFileSystemOptions.cs  ImaginaryFileSystemWatcherFactory.cs  ImaginaryFileVersionInfo.cs  ImaginaryPath.cs  (+9 more)
bat/: publish_universal_asset_tool.bat  publish_universal_asset_tool_patched_assimp.bat
cli/: config.json  rip_super_paper_mario.bat
native/AssimpMorphFbxConverter/: CMakeLists.txt  assimp-fbx-morph-animation.patch  main.cpp
(+3723 files in other folders)
